# jarvis-elevenlabs

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  ui.py
actions/: file_processor.py
config/: __init__.py
core/: installer.py  llm_client.py  stt.py  tts.py
dashboard/: server.py
